--- a/Diabetest2/app/src/main/res/layout/fragment_basic_info_mision.xml
+++ b/Diabetest2/app/src/main/res/layout/fragment_basic_info_mision.xml
@@ -9,12 +9,13 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -79,7 +80,13 @@
                 android:layout_height="wrap_content"
                 android:text="TextView" />
 
+            <Button
+                android:id="@+id/empMision"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Empezar Misión" />
+
         </LinearLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
 </FrameLayout>
