--- a/Diabetest2/app/src/main/res/layout/item_list_pasos.xml
+++ b/Diabetest2/app/src/main/res/layout/item_list_pasos.xml
@@ -1,94 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
+>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <android.support.v7.widget.CardView
+        android:id="@+id/fab"
+        android:layout_width="255dp"
+        android:layout_height="0dp"
 
-
-        <TextView
-            android:id="@+id/nombre"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textSize="30sp"
-           android:layout_marginLeft="100dp"
-            android:textColor="@android:color/holo_green_dark" />
+        android:layout_marginLeft="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        card_view:background="@color/blanco75"
+        card_view:cardCornerRadius="19dp"
+        card_view:cardElevation="6dp"
+        card_view:cardPreventCornerOverlap="false"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-
-
-                app:cardBackgroundColor="@color/blanco75"
-                app:cardElevation="10dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/textView154"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Dias Totales"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-                    <TextView
-                        android:id="@+id/orden"
-                        android:layout_width="116dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_weight="1"
-                        android:text="hola"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                        android:textSize="30sp" />
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
-
-
-            <LinearLayout
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_weight="1"
+                android:text="Dia "
+                android:textColor="@color/cardview_dark_background"
+                android:textSize="50sp"
+                tools:text="Dia" />
 
-                <android.support.v7.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
+            <TextView
+                android:id="@+id/diaMision"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="N"
+                android:textColor="@color/cardview_dark_background"
+                android:textSize="50sp" />
 
-                    app:cardBackgroundColor="@color/blanco75"
-                    app:cardElevation="10dp">
+            <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="20dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:checked="false"
+                android:scaleX="2"
+                android:scaleY="2"
+                tools:layout_editor_absoluteX="311dp"
+                tools:layout_editor_absoluteY="43dp" />
 
-                    <TextView
-                        android:id="@+id/descripcion"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="TextView" />
-                </android.support.v7.widget.CardView>
-            </LinearLayout>
-            </LinearLayout>
+        </LinearLayout>
 
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
+
 
 </android.support.constraint.ConstraintLayout>
