--- a/Diabetest2/app/src/main/res/layout/activity_pasosmod.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_pasosmod.xml
@@ -48,6 +48,7 @@
         android:layout_marginStart="116dp"
         android:layout_marginTop="4dp"
         android:text="Finalizar"
+        android:onClick="enviar"
         app:layout_constraintStart_toEndOf="@+id/busc2"
         app:layout_constraintTop_toTopOf="parent" />
 
